# CPSSIV_2019

./: README.md  STOP.elf  STOP.slx  Steady_state_1_9ms.mat  Steady_state_3_8ms.mat  Steady_state_max_rear.mat  Steady_state_max_rear_no_sat.mat  Winston_SteadyTurn.elf  Winston_SteadyTurn.slx  Yaw_controller_5_7.m  Yaw_controller_test_5_26_18_2017a.slx
ProgreSSIV_Teensy_Firmware/: Adafruit_Sensor.h  CMakeLists.txt  ProgreSSIV_CAN_msg_handler.cpp  ProgreSSIV_IMU_task.cpp  ProgreSSIV_MC_state_machine.cpp  ProgreSSIV_MC_state_machine.h  ProgreSSIV_SPI_task.cpp  ProgreSSIV_SPI_task.h  ProgreSSIV_Teensy_Firmware.ino  imumaths.h  input_handler.cpp  input_handler.h  matrix.h  output_handler.cpp  output_handler.h  quaternion.h  vector.h
STOP_ert_rtw/: STOP.mk  buildInfo.mat  rtw_proj.tmw
Winston_SteadyTurn_ert_rtw/: Tire Testing Procedures.docx  Winston_SteadyTurn.mk  Winston_SteadyTurn_targ_data_map.m  buildInfo.mat  rtw_proj.tmw
